--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+/.venv/
+*.pyc
+*.xml
+*.iml
+db.sqlite3
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -58,7 +64,6 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
